--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "numeral": "^2.0.6",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.0.20",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
     "vue-class-component": "^8.0.0-0",
+    "vue-pagination-2": "^3.0.91",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
